--- a/src/main/resources/com/example/jsfdemo/messages_pl.properties
+++ b/src/main/resources/com/example/jsfdemo/messages_pl.properties
@@ -1,21 +1,22 @@
-mainWindowTitle=Aplikacja JSF - demo
-action=Akcja
-actionDelete=Usu\u0144
-mainHeading=Zarz\u0105dzanie danymi os\u00F3b
+mainWindowTitle=MotoDBManager
+motorcycleBrandLabel=Marka
+motorcycleModelLabel=Model
+motorcycleYearOfManufactureLabel=Rok produkcji
+motorcyclePriceLabel=Cena
+mainHeading=Motorcycle Store
 
 linkHome=Strona g\u0142\u00F3wna
 
-applicationInfo=To jest aplikacja demo pokazuj\u0105ca podstawowe mo\u017Cliwo\u015Bci i w\u0142asno\u015Bci technologii JSF 2.0,  CDI, EJB 3.1 i innych Java EE 6 Web Profile
+applicationInfo=Project MotoStore Manager
+clientAddLabel=Dodaj nowego klienta
+motorcycleAddLabel=Dodaj nowy motocykl
+clientShowAll=Poka\u017C wszystkich klient\u00F3w
+clientFirstNameLabel=Imi\u0119
+clientSurnameLabel=Nazwisko
 
-personFirstNameLabel=Imi\u0119
-personDobLabel=Data urodzenia
-personZipCodeLabel=Kod pocztowy
-personPinLabel=PESEL
-personMarriedLabel=Zam\u0119\u017Cna/\u017Bonaty
-personWeightLabel=Waga
-personNumOfChildrenLabel=Liczba dzieci
-
-personFormOKButton=Zatwierd\u017A
-personAddLabel=Dodaj now\u0105 osob\u0119
-personShowAll=Poka\u017C wszystkie osoby
-personAllLabel=Wszystkie osoby
+clientFormOKButton=Zatwierd\u017A
+motorcycleFormOKButton=Zatwierd\u017A
+clientAllLabel=Wszyscy klienci
+motorcycleAllLabel=Wszystkie motocykle
+action=Akcja
+actionDelete=Usu\u0144
